--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
     <a href="index.html">Log out</a>
     <div class="element-container">
         <div class="container">
-            <h1>I love you Jun</h1>
+            <h1>Welcome to the game</h1>
             <div id="gameBoard" class="game-board"></div>
             <button id="resetButton">Reset</button>
             <div id="status" class="status"></div>
