--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             </div>
             <button type="submit">Login</button>
             <a href="register.html">Register</a>
+            <a href="">Forgot Password</a>
+
         </form>
     </main>
 </body>
